--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^4.0.0
+
+  flutter_native_splash:
+  firebase_core: 
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.0.0
   firebase_storage: ^13.0.0
@@ -50,6 +52,7 @@ dependencies:
   font_awesome_flutter:
   carousel_slider:
   cached_network_image:
+  google_sign_in: ^6.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -77,9 +80,25 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+assets:
+  - "assets/LightThemeLogo.png"
+  - "assets/DarkThemeLogo.png"
+  - "assets/google.png"
+  
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+flutter_native_splash:
+  color: "#FFFFFF"
+  color_dark: "#121212"
+  image: assets/LightThemeLogo.png
+  image_dark: assets/DarkThemeLogo.png
+  fullscreen: true
+
+  android_12:
+    image: assets/LightThemeLogo.png
+    image_dark: assets/DarkThemeLogo.png
+    color: "#FFFFFF"
+    color_dark: "#121212"
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
