--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_storage: ^13.0.0
   flutter_riverpod: ^3.0.0
+  
   uuid: ^4.0.0
   image_picker: ^1.0.0
   timeago: ^3.0.2
@@ -60,6 +61,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
