feat: Refactor user profile and settings screens for improved data handling and UI
- Removed unused user data loading method from SettingsScreen.
- Converted UserProfileScreen from Stateless to Stateful widget to handle real-time user data updates.
- Implemented Firestore streaming for user data in UserProfileScreen.
- Enhanced user profile display with dynamic data from Firestore.
- Added follow/unfollow functionality with Firestore transactions in UserProfileScreen.
- Integrated NotificationController to listen for notifications upon user login.
- Added Firestore listener for notifications in NotificationController.
- Updated main.dart to register NotificationController if a user is signed in.
- Improved image handling with a new utility for resolving image sources.
- Updated tweet card and detail screens to utilize new image resolver and improve avatar handling.
- Added local notifications support with flutter_local_notifications package.
- Updated dependencies in pubspec.yaml and generated plugin files for new features.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   flutter_native_splash:
+ 
   firebase_core: 
   firebase_auth: ^6.1.2
   cloud_firestore: ^6.0.0
@@ -51,13 +52,16 @@ dependencies:
   equatable:
   shimmer: 
   font_awesome_flutter:
+  
+  firebase_messaging: ^16.1.0
+  flutter_local_notifications: ^19.5.0
   carousel_slider:
   cached_network_image:
   google_sign_in: ^6.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
