feat: Implement push notifications and enhance messaging features
- Added NotificationService for centralized notification handling.
- Integrated notification creation for likes, retweets, replies, follows, mentions, and messages.
- Updated MessageController to support chat deletion and mute/unmute functionality.
- Enhanced TweetService to process mentions and send notifications accordingly.
- Improved NotificationController to handle real-time updates and display notifications.
- Added setup scripts for push notifications deployment.

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,31 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"android-main-activity","appId":"1:520533736138:android:cdb53eab1a8086b7801233","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"android-main-activity","configurations":{"android":"1:520533736138:android:cdb53eab1a8086b7801233","ios":"1:520533736138:ios:e4b4b87f38c619d0801233","macos":"1:520533736138:ios:e4b4b87f38c619d0801233","web":"1:520533736138:web:2144430b2366745e801233","windows":"1:520533736138:web:e7f1be81eb8942d6801233"}}}}}}
+{
+  "functions": {
+    "source": "functions",
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  },
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "android-main-activity",
+          "appId": "1:520533736138:android:cdb53eab1a8086b7801233",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "android-main-activity",
+          "configurations": {
+            "android": "1:520533736138:android:cdb53eab1a8086b7801233",
+            "ios": "1:520533736138:ios:e4b4b87f38c619d0801233",
+            "macos": "1:520533736138:ios:e4b4b87f38c619d0801233",
+            "web": "1:520533736138:web:2144430b2366745e801233",
+            "windows": "1:520533736138:web:e7f1be81eb8942d6801233"
+          }
+        }
+      }
+    }
+  }
+}
